remove maxpermsize